--- a/QuizApp2.html
+++ b/QuizApp2.html
@@ -120,11 +120,11 @@
           font-size: 5ch;
           font-weight: 600;
       }
-      #nextpage2{
-          margin-left: 20ch;
+      #samepage{
+          margin-left: 25ch;
           font-family: cursive;
       }
-      #samepage2{
+      #previouspage{
           margin-left: 25ch;
           font-family: cursive;
       
